adding more examples