@@ -4,6 +4,7 @@ package Streams;
 // stream in Java
 
 import java.util.*;
+import java.util.function.Predicate;
 import java.util.stream.*;
 
 public class Example1 {
@@ -14,19 +15,19 @@ public class Example1 {
         List<Integer> l
                 = Arrays.asList(
                 5, 10, 20, 30, 8, 7);
-
+        Predicate<Integer> greaterThan4 = number -> number > 4;
         // Taking the list as a source
         // Applying stream
         // filtering out the even numbers
         // filtering out the numbers > 10
         // Printing the list
         List<Integer> li = l.stream()
-                .filter(x -> x % 2 == 0 && x >= 10)
+                .filter(greaterThan4)
                 .collect(Collectors.toList());
 
         System.out.println(li);
 
-        List<String> names = Arrays.asList("John", "Jane", "Jack", "Ankit", "Jithesh", "Aditya");
+        List<String> names = List.of("John", "Jane", "Jack", "Ankit", "Jithesh", "Aditya");
         List<Integer> nameLengths = names.stream()
                 .map(String::length)
                 .filter(x -> x > 4)
@@ -76,13 +77,25 @@ public class Example1 {
             return i * 2;
         }).sum();
 
-        List<Integer> numbers = Arrays.asList(1,2,3,4,5,6); // Your list of numbers
+        List<Integer> numbers = List.of(1,2,3,4,5,6); // Your list of numbers
 
         int sumOfEvenNumbers = numbers.stream()
                 .filter(n -> n % 2 == 0)
                 .mapToInt(Integer:: intValue)
                 .sum();
         System.out.println(sumOfEvenNumbers);
+
+        // Creates a list using asList()
+        List<Integer> l2 = new ArrayList<>();
+
+        for(int i=1; i<200; i++){
+            l2.add(i);
+        }
+
+        List<Integer> l3 = l2.stream().filter(x -> x%5 == 0).map(x -> x*2).collect(Collectors.toList());
+
+        System.out.println("l3\n" + l3);
+
 
     }
 }
